# codebase-index-mcp

./: README.md  main.py  pyproject.toml
.codex/: checkpoint.md  task.md
code_index/: __init__.py  chunking.py  cli.py  config.py  device.py  embedding.py  errors.py  files.py  git_utils.py  indexer.py  mcp_server.py  operations.py  paths.py  store.py  text_detect.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_device.py  test_embedding.py  test_incremental.py  test_store.py  test_vector_store.py
